--- a/app/modules/registration/views/register.html
+++ b/app/modules/registration/views/register.html
@@ -85,7 +85,7 @@
 <div class="modal fade fade-scale" id="otpModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="fadeIn otp-wrapper">
+      <div class="fadeIn modal-wrapper">
       <button data-dismiss="modal" class="modal-close"></button>
 	<header class="login-header col-xs-12">
 		<div class="row">
