--- a/less/planinvset.less
+++ b/less/planinvset.less
@@ -162,13 +162,13 @@ section{
 .type2Sliders{
   	.swiper-content{
     	float:left;
-    	p{
+    	p.question{
     		width:86%;
     		.PIXEL2EM(24)!important;
     	}
     	span{
     		&.normal{
-    			.PIXEL2EM(26)!important;
+    			.PIXEL2EM(26);
     		}
     	}
 	}
