--- a/less/widgets.less
+++ b/less/widgets.less
@@ -9,10 +9,10 @@
 	padding-left: 5%;
 	padding-right: 5%;
 	.debt{
-		color:#62bb46;
+		color:#62bb46!important;
 	}
 	.equity{
-		color:#cb624d;
+		color:#cb624d!important;
 	}
 	.meter-header{
 		padding-bottom: 4%;
@@ -31,20 +31,22 @@
 			}
 		}
 		h2{
-			font-family :'Roboto-Bold';
-			.PIXEL2EM(16);
-			margin-bottom: 0px;
+			font-family :'Roboto-Bold'!important;
+			.PIXEL2EM(16)!important;
+			margin-bottom: 0px!important;
+			width:100%!important;
 		}
 		p{
-			font-family: 'PlayfairDisplay-Regular';
-			.PIXEL2EM(36);
-			line-height: 24px;
-			margin-top:5px;
+			font-family: 'PlayfairDisplay-Regular'!important;
+			.PIXEL2EM(36)!important;
+			line-height: 24px!important;
+			margin-top:5px!important;
+			width:100%!important;
 		}
 		h4{
-			font-family :'Roboto-Bold';
-			.PIXEL2EM(18);
-			opacity: 0.6;
+			font-family :'Roboto-Bold'!important;
+			.PIXEL2EM(18)!important;
+			opacity: 0.6!important;
 			span{
 				&.currency{
 					margin-right:3px;
@@ -154,9 +156,10 @@
 	}
 	.bottom-text{
 		.GLOBAL_FONT_STYLE('Roboto-Bold',@black,normal);
-		.PIXEL2EM(16);
+		.PIXEL2EM(16)!important;
 		margin-top: 5px;
 		text-align: center;
+		width:100%!important;
 	}
 
 }
