--- a/app/modules/common/views/partials/calendar.html
+++ b/app/modules/common/views/partials/calendar.html
@@ -1,8 +1,8 @@
 <div class="col-xs-12">
-	<div class="pull-left calendar-cover" ng-class="(type=='blue')?'addBlue':'addRed'">
-		<div ng-if="format = 'percent'" class="format">%</div>
+	<div class="pull-left calendar-cover" ng-style="{'background-color':type}">
+	<div ng-if="format = 'percent'" ng-style="{'color':fontColor}" class="format">%</div>
 		<div class="calendar-body">
-			<input type="text" ng-model="model">
+			<input ng-style="{'color':fontColor}" type="text" ng-model="model">
 		</div>
 		<div class="calendar-footer">
 			<button ng-click="doDecrement()"><img src="assets/images/minus.png"></button>
