--- a/less/main.less
+++ b/less/main.less
@@ -9,6 +9,6 @@
 @import 'riskassesment.less';
 @import 'dashboard.less';
 @import 'planinvset.less';
-
+@import 'goals.less';
 @import 'modal.less';
 @import 'widgets.less';
